# goit-web-homework-09

./: authors.json  pyproject.toml  scraping.py
